kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: med-pro
spec:
  progressDeadlineSeconds: 600
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
    spec:
      imagePullSecrets:
        - name: io.ghcr.smartmedsa
      containers:
      - env:
        - name: PORT
          value: "3000"
        imagePullPolicy: Always
        image: ghcr.io/smartmedsa/med-pro
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: med-pro
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
