kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
  generation: 2
  name: med-pro
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              service:
                name: med-pro
                port:
                  number: 80
            path: /
            pathType: Prefix
